adjust spacing for nft grid to ensure all nft cards are same height

--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.moon-logo-initials {
+  z-index: 999 !important;
+}
